--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,13 @@
     z-index: 1000; /* Assure que le bandeau reste au-dessus des autres éléments */
 }
 
+.logo-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none; /* Supprime la sous-ligne du lien */
+    color: inherit; /* Utilise la couleur du texte du parent */
+}
+
 .logo-container {
     display: flex;
     align-items: center;
@@ -30,6 +37,7 @@
     margin: 0;
 }
 
+/* Style de la navigation */
 .main-nav {
     display: flex;
     align-items: center;
