--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@
     align-items: center;
     text-decoration: none; /* Supprime la sous-ligne du lien */
     color: inherit; /* Utilise la couleur du texte du parent */
+    margin-left: 50px; /* Décalage vers la droite pour le logo et le titre */
 }
 
 .logo-container {
@@ -40,10 +41,10 @@
     font-family: 'Helvetica', sans-serif; /* Utilise la même police que les liens */
 }
 
-/* Style de la navigation */
 .main-nav {
     display: flex;
     align-items: center;
+    margin-right: 50px; /* Décalage vers la gauche pour les boutons de navigation */
 }
 
 .main-nav ul {
