--- a/styles.css
+++ b/styles.css
@@ -77,18 +77,21 @@
     background-color: #ffffff; /* Fond blanc */
     color: #000000; /* Texte noir pour contraste */
     font-weight: bold; /* Texte en gras */
-    transition: transform 0.3s ease; /* Transition douce pour l'effet hover et le déplacement */
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Transition douce pour l'effet hover */
     position: relative; /* Nécessaire pour l'animation */
     text-transform: uppercase;
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0); /* Pas de shadow initialement */
 }
 
 .main-nav ul li a.contact-btn:hover {
     transform: translateY(-5px); /* Légère montée du bouton */
+    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2); /* Ajout d'une ombre au survol pour effet de profondeur */
 }
 
 /* Remet le bouton à sa position initiale lorsqu'il n'est plus survolé */
 .main-nav ul li a.contact-btn {
     transform: translateY(0);
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0); /* Remet la shadow à 0 */
 }
 
 /* Ajoute un padding-top au contenu principal pour compenser le bandeau fixe */
